--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,14 @@
 version: '3.8'
 services:
   web:
-    image: mightysanjay/my-passive:v1
+    image: CICD-PassiveLiveliness:latest
+    build: 
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "5000:5000"
     stdin_open: true
     tty: true
     command: ["/bin/bash"]
+    volumes:
+      - .:/app
