--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,7 @@
-version: '3.8'
+version: "3"
 services:
-  web:
-    image: CICD-PassiveLiveliness:latest
-    build: 
-      context: .
-      dockerfile: Dockerfile
+  app:
+    build: .
     ports:
       - "5000:5000"
     stdin_open: true
