Updatd docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,6 @@ services:
     image: mightysanjay/my-passive:v1
     ports:
       - "5000:5000"
-    stdin_open: true  # Equivalent to -i
-    tty: true         # Equivalent to -t
+    stdin_open: true 
+    tty: true         
     command: ["sh", "-c", "./start.sh && tail -f /dev/null"]
