--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   web:
-    image: mightysanjay/my-passive:v1
+    build: .
     ports:
       - "5000:5000"
     stdin_open: true 
