--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,11 @@ version: '3.8'
 
 services:
   web:
+    image: mightysanjay/my-passive:v2  
     build: .
     ports:
       - "5000:5000"
-    stdin_open: true 
+    stdin_open: true  
     tty: true         
     command: ["sh", "-c", "./start.sh && tail -f /dev/null"]
+
