--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,10 @@
+version: '3.8'
+
 services:
   web:
-    build: .
+    image: mightysanjay/my-passive
     ports:
       - "5000:5000"
-    stdin_open: true  
-    tty: true         
+    stdin_open: true  # Equivalent to -i
+    tty: true         # Equivalent to -t
     command: ["sh", "-c", "./start.sh && tail -f /dev/null"]
-
