--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,9 @@
-version: '3.8'
-
 services:
   web:
-    image: mightysanjay/my-passive
+    image: mightysanjay/my-passive:v3   
+    build: .
     ports:
       - "5000:5000"
-    stdin_open: true  # Equivalent to -i
-    tty: true         # Equivalent to -t
+    stdin_open: true  
+    tty: true         
     command: ["sh", "-c", "./start.sh && tail -f /dev/null"]
